--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ h11==0.14.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
-python-dotenv==1.0.0
+python-dotenv
 uvicorn==0.22.0
 waitress==2.1.2
 Werkzeug==2.3.4
+/opt/render/project/src/.venv/bin/python -m pip install --upgrade pip
